--- a/index.html
+++ b/index.html
@@ -181,70 +181,72 @@
 
 
 <!----------------------------------------- Skills Section ------------------------------------->
-<section id="skills" class="skills-section py-5">
-  <div class="container">
-    <h2 class="section-title text-center mb-4" data-aos="fade-up">My Skills</h2>
-    <p class="section-subtitle text-center mb-5" data-aos="fade-up" data-aos-delay="100">
-      Technologies & tools I specialize in — from pixel-perfect design to interactive experiences.
-    </p>
+<section class="skills-section">
+  <h2 class="section-title">My Skills</h2>
+  <p class="section-subtitle">Technologies I specialize in with creative experience</p>
 
-    <div class="row g-4 justify-content-center">
-
-      <!-- Skill Card -->
-      <div class="col-lg-3 col-md-4 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-        <div class="circular-progress" style="--value: 95;">
-          <div class="inner-content">
-            <i class="fa-brands fa-html5 skill-icon"></i>
-            <div class="skill-label">HTML</div>
-            <div class="skill-percent">95%</div>
-          </div>
-        </div>
+  <div class="skills-grid">
+    <div class="skill-card" data-percent="95">
+      <i class="fa-brands fa-html5 skill-icon"></i>
+      <div class="skill-name">HTML</div>
+      <div class="progress-ring">
+        <svg width="110" height="110">
+          <circle class="bg-ring" cx="55" cy="55" r="50"/>
+          <circle class="fg-ring" cx="55" cy="55" r="50"/>
+        </svg>
+        <div class="percent-text">0%</div>
       </div>
+    </div>
 
-      <div class="col-lg-3 col-md-4 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-        <div class="circular-progress" style="--value: 90;">
-          <div class="inner-content">
-            <i class="fa-brands fa-css3-alt skill-icon"></i>
-            <div class="skill-label">CSS</div>
-            <div class="skill-percent">90%</div>
-          </div>
-        </div>
+    <div class="skill-card" data-percent="90">
+      <i class="fa-brands fa-css3-alt skill-icon"></i>
+      <div class="skill-name">CSS</div>
+      <div class="progress-ring">
+        <svg width="110" height="110">
+          <circle class="bg-ring" cx="55" cy="55" r="50"/>
+          <circle class="fg-ring" cx="55" cy="55" r="50"/>
+        </svg>
+        <div class="percent-text">0%</div>
       </div>
+    </div>
 
-      <div class="col-lg-3 col-md-4 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-        <div class="circular-progress" style="--value: 85;">
-          <div class="inner-content">
-            <i class="fa-brands fa-js skill-icon"></i>
-            <div class="skill-label">JavaScript</div>
-            <div class="skill-percent">85%</div>
-          </div>
-        </div>
+    <div class="skill-card" data-percent="85">
+      <i class="fa-brands fa-js skill-icon"></i>
+      <div class="skill-name">JavaScript</div>
+      <div class="progress-ring">
+        <svg width="110" height="110">
+          <circle class="bg-ring" cx="55" cy="55" r="50"/>
+          <circle class="fg-ring" cx="55" cy="55" r="50"/>
+        </svg>
+        <div class="percent-text">0%</div>
       </div>
+    </div>
 
-      <div class="col-lg-3 col-md-4 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-        <div class="circular-progress" style="--value: 95;">
-          <div class="inner-content">
-            <i class="fa-brands fa-bootstrap skill-icon"></i>
-            <div class="skill-label">Bootstrap</div>
-            <div class="skill-percent">95%</div>
-          </div>
-        </div>
+    <div class="skill-card" data-percent="95">
+      <i class="fa-brands fa-bootstrap skill-icon"></i>
+      <div class="skill-name">Bootstrap</div>
+      <div class="progress-ring">
+        <svg width="110" height="110">
+          <circle class="bg-ring" cx="55" cy="55" r="50"/>
+          <circle class="fg-ring" cx="55" cy="55" r="50"/>
+        </svg>
+        <div class="percent-text">0%</div>
       </div>
+    </div>
 
-      <div class="col-lg-3 col-md-4 col-sm-6" data-aos="zoom-in" data-aos-delay="200">
-        <div class="circular-progress" style="--value: 80;">
-          <div class="inner-content">
-            <i class="fa-solid fa-bolt skill-icon"></i>
-            <div class="skill-label">GSAP</div>
-            <div class="skill-percent">80%</div>
-          </div>
-        </div>
+    <div class="skill-card" data-percent="80">
+      <i class="fa-solid fa-bolt skill-icon"></i>
+      <div class="skill-name">GSAP</div>
+      <div class="progress-ring">
+        <svg width="110" height="110">
+          <circle class="bg-ring" cx="55" cy="55" r="50"/>
+          <circle class="fg-ring" cx="55" cy="55" r="50"/>
+        </svg>
+        <div class="percent-text">0%</div>
       </div>
-
     </div>
   </div>
 </section>
-
 
 
 
