--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navbar -->
     
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-color">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-color">
         <div class="container-fluid mx-lg-3">
           <!-- Logo -->
           <a class="navbar-brand" href="#">
@@ -279,9 +279,18 @@
     <div class="images" id="modal-images"></div>
     <p id="modal-desc"></p>
     <div class="tools" id="modal-tools"></div>
-    <a id="modal-link" href="#" target="_blank">Visit Project ↗</a>
+    <a id="modal-link" href="#" target="_blank">Github <i class="fa-brands fa-github"></i></a>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
 
 
   <!-- JS Scripts -->
