--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="offcanvas-header justify-content-end">
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
-          <div class="offcanvas-body d-flex justify-content-lg-end justify-content-center align-items-center">
+          <div class="offcanvas-body d-flex justify-content-lg-end justify-content-center ">
             <ul class="navbar-nav gap-5 main-menu">
               <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
