--- a/index.html
+++ b/index.html
@@ -49,6 +49,48 @@
   </header>
 
 
+  <!--------------------------------------------contect me canvas ------------------------------->
+
+  <button class="btn btn-primary my-details" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+    Contact Me
+  </button>
+
+  <!-- Offcanvas Sidebar -->
+  <div class="offcanvas offcanvas-start contect-me-canvas" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
+    <div class="offcanvas-header">
+      <div class="offcanvas-title" id="staticBackdropLabel">
+        <img src="./images/ap_logo_1.png" class="offcanvas-logo" alt="Logo">
+      </div>
+      <button type="button" class="btn-close bg-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+
+    <div class="offcanvas-body text-white">
+      <div class="mb-3 d-flex gap-3">
+        <h5>📞 Mobile</h5>
+        <p>+91 9876543210</p>
+      </div>
+
+      <div class="mb-3 d-flex gap-3">
+        <h5>📧 Email</h5>
+        <p>example@email.com</p>
+      </div>
+
+      <div class="mb-3 d-flex gap-3">
+        <h5>🏠 Address</h5>
+        <p>123, Your Street,<br>Your City, 123456</p>
+      </div>
+
+      <div>
+        <h5>🌐 Follow Me</h5>
+        <div class="d-flex gap-3 fs-4 mt-2">
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <!------------------------------------------- banner ---------------------------------------------->
