--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 
 
   <!--------------------------------------------contect me canvas ------------------------------->
-
   <button class="btn btn-primary my-details" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
     Contact Me
   </button>
@@ -65,33 +64,38 @@
     </div>
 
     <div class="offcanvas-body text-white">
-      <div class="mb-3 d-flex gap-3">
-        <h5>📞 Mobile</h5>
+      <div class="mb-4">
+        <h5><i class="fas fa-phone-alt me-2"></i>Mobile</h5>
         <p>+91 9876543210</p>
       </div>
 
-      <div class="mb-3 d-flex gap-3">
-        <h5>📧 Email</h5>
+      <div class="mb-4">
+        <h5><i class="fas fa-envelope me-2"></i>Email</h5>
         <p>example@email.com</p>
       </div>
 
-      <div class="mb-3 d-flex gap-3">
-        <h5>🏠 Address</h5>
+      <div class="mb-4">
+        <h5><i class="fas fa-map-marker-alt me-2"></i>Address</h5>
         <p>123, Your Street,<br>Your City, 123456</p>
       </div>
 
       <div>
-        <h5>🌐 Follow Me</h5>
-        <div class="d-flex gap-3 fs-4 mt-2">
-          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+        <h5><i class="fas fa-globe me-2"></i>Follow Me</h5>
+        <div class="d-flex gap-4 fs-4 mt-2">
+          <div><a href="https://www.instagram.com/lla_s_hll/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></div>
+          <div>
+          <a href="https://www.linkedin.com/in/akash-prajapati-84b09b310/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          </div>
+          <div>
+          <a href="https://www.facebook.com/profile.php?id=100033262818616" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+          </div>
+          <div>
+          <a href="https://github.com/akash-8181" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
 
   <!------------------------------------------- banner ---------------------------------------------->
 
