--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
     </div>
     <button type="button" class="btn-close bg-white" data-bs-dismiss="offcanvas"></button>
   </div>
-  <div class="offcanvas-body text-white ms-5">
-    <div class="mb-4 d-flex gap-3">
+  <div class="offcanvas-body text-white">
+    <div class="mb-4">
       <h5><i class="fas fa-phone-alt me-2"></i>Mobile</h5>
-      <p>+91 9876543210</p>
+      <p>+91 9327424030</p>
     </div>
-    <div class="mb-4 d-flex gap-3">
-      <h5><i class="fas fa-envelope me-2"></i>Email</h5>
-      <p>example@email.com</p>
+    <div class="mb-4">
+      <h5 class="d-flex"><i class="fas fa-envelope me-2"></i>Email</h5>
+      <p >akashprajapati2563@gmail.com</p>
     </div>
-    <div class="mb-4 d-flex gap-3">
+    <div class="mb-4">
       <h5><i class="fas fa-map-marker-alt me-2"></i>Address</h5>
-      <p>123, Your Street,<br>Your City, 123456</p>
+      <p>C-46, Nilkanth Socity,Vastral, 382418</p>
     </div>
     <div>
       <h5><i class="fas fa-globe me-2"></i>Follow Me</h5>
