--- a/index.html
+++ b/index.html
@@ -15,28 +15,38 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <!-- HEADER -->
+<!-- HEADER -->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-color">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container-fluid mx-lg-3">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
         <img src="./images/ap_logo_1.png" class="nav-icon" alt="Logo">
       </a>
 
-      <!-- Navbar Toggle Button -->
-      <button class="btn btn-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu">
-        <i class="fa-solid fa-bars-staggered text-dark"></i>
+      <!-- Navbar Toggle Button (Visible only on small screens) -->
+      <button class="btn d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu">
+        <i class="fa-solid fa-bars-staggered toggle-icon"></i>
       </button>
 
-      <!-- Navbar Offcanvas Menu -->
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasMenu">
+      <!-- Normal Navbar Menu for LG+ screens -->
+      <div class="collapse navbar-collapse d-none d-lg-flex justify-content-end">
+        <ul class="navbar-nav gap-3 gap-lg-5 main-menu">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        </ul>
+      </div>
+
+      <!-- Offcanvas Menu for Mobile -->
+      <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasMenu">
         <div class="offcanvas-header justify-content-end">
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body d-flex justify-content-lg-end justify-content-center">
-          <ul class="navbar-nav gap-3 gap-lg-5 main-menu">
+        <div class="offcanvas-body d-flex justify-content-center">
+          <ul class="navbar-nav gap-3 main-menu">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
@@ -48,6 +58,8 @@
     </div>
   </nav>
 </header>
+
+
 
 <!-- Contact Me Sidebar Button -->
 <button class="btn btn-primary my-details" type="button" data-bs-toggle="offcanvas" data-bs-target="#contactCanvas">
