--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
         <p class="line paragraph">
           I believe in clean design, smooth animations, and code that feels good to read.
         </p>
-        <a href="#contact" class="about-btn paragraph">Get in Touch</a>
+        <a href="#" class="about-btn paragraph me-3 me-lg-4">Get in Touch</a>
+        <a href="" class="about-btn paragraph">My Resume</a>
       </div>
     </div>
     <div class="education-section">
@@ -332,7 +333,61 @@
 
 
 
+<!----------------------------------------- Form ---------------------------------------------->
+<section class="contact-wrapper px-3 px-lg-5">
+  <h2 class="section-title">Get in Touch</h2>
 
+  <div class="contact-container">
+
+    <!-- Left Side -->
+    <div class="contact-form">
+      <div class="input-group">
+        <label for="name">Your Name</label>
+        <input type="text" id="name" />
+      </div>
+
+      <div class="input-group">
+        <label for="email">Your Email</label>
+        <input type="email" id="email" />
+      </div>
+
+      <div class="input-group">
+        <label for="phone">Your Phone</label>
+        <input type="tel" id="phone" />
+      </div>
+
+      <div class="input-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" rows="5" ></textarea>
+      </div>
+
+      <div class="btn-group">
+        <button class="send-btn">Send via Gmail</button>
+        <button id="whatsappLink">WhatsApp</button>
+      </div>
+    </div>
+
+    <!-- Right Side -->
+    <div class="contact-details-box">
+      <h3> Contact Info</h3>
+
+      <div class="info-card">
+        <h4><i class="fa-solid fa-mobile-screen-button"></i> &nbsp; Mobile</h4>
+        <p><a href="#" id="callLink">+91 93274 24030</a></p>
+      </div>
+
+      <div class="info-card">
+        <h4><i class="fa-solid fa-envelope"></i> &nbsp; Primary Email (Form)</h4>
+        <p><a href="#" id="emailLink">akashprajapati2563@gmail.com</a></p>
+      </div>
+
+      <div class="info-card">
+        <h4><i class="fa-solid fa-location-dot"></i> &nbsp; Address </h4>
+        <p><a href="https://www.google.com/maps/dir//Nilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038/@23.0049613,72.6480124,17z/data=!4m18!1m8!3m7!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2sNilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038!3b1!8m2!3d23.0048966!4d72.6488404!16s%2Fg%2F12hnttzdb!4m8!1m0!1m5!1m1!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2m2!1d72.6488404!2d23.0048966!3e9?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D">C-46 Nilanth Socity, Vastral, Ahmedabad-382418</a></p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
