--- a/index.html
+++ b/index.html
@@ -313,13 +313,21 @@
 
 <!---------------------------------------------- projects ------------------------------------>
 
-<section class="projects-section" id="projects">
-  <h2>My Projects</h2>
-  <p>Click any project to view full details and gallery</p>
-  <div class="projects-grid" id="projects-container"></div>
+<!-- Academic Projects -->
+<section class="projects-section" id="academic-projects">
+  <h2>Academic Projects</h2>
+  <p>Click any project to view full details and Github Repository</p>
+  <div class="projects-grid" id="academic-projects-container"></div>
 </section>
 
-<!-- Modal -->
+<!-- Freelancing Projects -->
+<section class="projects-section" id="freelance-projects">
+  <h2>Freelancing Projects</h2>
+  <p>Click any project to view full details and Live/Code Link</p>
+  <div class="projects-grid" id="freelance-projects-container"></div>
+</section>
+
+<!-- Shared Modal -->
 <div class="modal" id="project-modal">
   <div class="modal-content">
     <span class="close-btn" onclick="document.getElementById('project-modal').style.display='none'">&times;</span>
@@ -327,9 +335,10 @@
     <div class="images" id="modal-images"></div>
     <p id="modal-desc"></p>
     <div class="tools" id="modal-tools"></div>
-    <a id="modal-link" href="#" target="_blank">Github <i class="fa-brands fa-github"></i></a>
+    <a id="modal-link" href="#" target="_blank">View Project <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
   </div>
 </div>
+
 
 
 
@@ -373,17 +382,17 @@
 
       <div class="info-card">
         <h4><i class="fa-solid fa-mobile-screen-button"></i> &nbsp; Mobile</h4>
-        <p><a href="#" id="callLink">+91 93274 24030</a></p>
+        <p><a href="#" id="callLink" class="rside-texts">+91 93274 24030</a></p>
       </div>
 
       <div class="info-card">
-        <h4><i class="fa-solid fa-envelope"></i> &nbsp; Primary Email (Form)</h4>
-        <p><a href="#" id="emailLink">akashprajapati2563@gmail.com</a></p>
+        <h4><i class="fa-solid fa-envelope"></i> &nbsp; Email</h4>
+        <p><a href="#" class="rside-texts" id="emailLink">akashprajapati2563@gmail.com</a></p>
       </div>
 
       <div class="info-card">
         <h4><i class="fa-solid fa-location-dot"></i> &nbsp; Address </h4>
-        <p><a href="https://www.google.com/maps/dir//Nilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038/@23.0049613,72.6480124,17z/data=!4m18!1m8!3m7!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2sNilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038!3b1!8m2!3d23.0048966!4d72.6488404!16s%2Fg%2F12hnttzdb!4m8!1m0!1m5!1m1!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2m2!1d72.6488404!2d23.0048966!3e9?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D">C-46 Nilanth Socity, Vastral, Ahmedabad-382418</a></p>
+        <p><a href="https://www.google.com/maps/dir//Nilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038/@23.0049613,72.6480124,17z/data=!4m18!1m8!3m7!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2sNilkanth+Society,+Mahadev+Nagar+Tekra,+Ahmedabad,+Gujarat+380038!3b1!8m2!3d23.0048966!4d72.6488404!16s%2Fg%2F12hnttzdb!4m8!1m0!1m5!1m1!1s0x395e8647b4a8f857:0x3c4b89b3f7214d6e!2m2!1d72.6488404!2d23.0048966!3e9?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D" class="rside-texts">C-46 Nilanth Socity, Vastral, Ahmedabad-382418</a></p>
       </div>
     </div>
   </div>
