--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
         </ul>
       </div>
 
@@ -314,7 +314,7 @@
 <!---------------------------------------------- projects ------------------------------------>
 
 <!-- Academic Projects -->
-<section class="projects-section" id="academic-projects">
+<section class="projects-section" id="projects">
   <h2>Academic Projects</h2>
   <p>Click any project to view full details and Github Repository</p>
   <div class="projects-grid" id="academic-projects-container"></div>
