--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
         </ul>
       </div>
 
