--- a/index.html
+++ b/index.html
@@ -402,6 +402,17 @@
 
 
 
+<!------------------------------------------------- Footer ------------------------------------------------->
+
+
+
+<footer class="site-footer">
+  <div class="footer-content">
+    <p>&copy; <span id="footer-year"></span> All Rights Reserved by <strong>Akash Prajapati</strong></p>
+  </div>
+</footer>
+
+
 
 
   <!-- JS Scripts -->
