--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <p class="line paragraph">
           I believe in clean design, smooth animations, and code that feels good to read.
         </p>
-        <a href="#" class="about-btn paragraph me-3 me-lg-4">Get in Touch</a>
-        <a href="" class="about-btn paragraph">My Resume</a>
+        <a href="#GetInTouch" class="about-btn paragraph me-3 me-lg-4">Get in Touch</a>
+        <a href="./Akash_Resume.pdf" class="about-btn paragraph">My Resume</a>
       </div>
     </div>
     <div class="education-section">
@@ -343,7 +343,7 @@
 
 
 <!----------------------------------------- Form ---------------------------------------------->
-<section class="contact-wrapper px-3 px-lg-5">
+<section class="contact-wrapper px-3 px-lg-5" id="GetInTouch">
   <h2 class="section-title">Get in Touch</h2>
 
   <div class="contact-container">
