--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 <section class="projects-section" id="freelance-projects">
   <h2>Freelancing Projects</h2>
   <p>Click any project to view full details and Live/Code Link</p>
-  <div class="projects-grid" id="freelance-projects-container"></div>
+  <div class="projects-grid d-flex justify-content-center" id="freelance-projects-container"></div>
 </section>
 
 <!-- Shared Modal -->
