--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 <section class="projects-section" id="projects">
   <h2>Academic Projects</h2>
   <p>Click any project to view full details and Github Repository</p>
-  <div class="projects-grid" id="academic-projects-container"></div>
+  <div class="projects-grid d-flex flex-wrap justify-content-center" id="academic-projects-container"></div>
 </section>
 
 <!-- Freelancing Projects -->
