--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
       <div class="info-card">
         <h4><i class="fa-solid fa-envelope"></i> &nbsp; Email</h4>
-        <p><a href="#" class="rside-texts" id="emailLink">akashprajapati2563@gmail.com</a></p>
+        <p><a href="#" class="rside-texts" id="emailLink2">akashprajapati2563@gmail.com</a></p>
       </div>
 
       <div class="info-card">
